@@ -475,7 +475,8 @@ man3_tinker_DATA = \
         $(DOX_MAN_DIR)/man3/hwloc_topology_insert_misc_object.3 \
         $(DOX_MAN_DIR)/man3/hwloc_topology_alloc_group_object.3 \
         $(DOX_MAN_DIR)/man3/hwloc_topology_insert_group_object.3 \
-        $(DOX_MAN_DIR)/man3/hwloc_obj_add_other_obj_sets.3
+        $(DOX_MAN_DIR)/man3/hwloc_obj_add_other_obj_sets.3 \
+        $(DOX_MAN_DIR)/man3/hwloc_topology_refresh.3
 
 man3_xmlexportdir = $(man3dir)
 man3_xmlexport_DATA = \
